# NIWSParametricEq

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
plugin/: CMakeLists.txt
plugin/include/NIWSParametricEq/: BypassTransitioner.h  FilterInspectorPanel.h  FrequencyResponseGUI.h  JsonSerializer.h  Lfo.h  Parameters.h  ParametricEq.h  PluginEditor.h  PluginProcessor.h  SpectrumAnalyzer.h
plugin/include/NIWSParametricEq/filters/: AllPassFilter.h  BandPassFilter.h  BiquadFilter.h  FilterParameters.h  HighPassFilter.h  HighShelfFilter.h  LowPassFilter.h  LowShelfFilter.h  NotchFilter.h  PeakFilter.h
plugin/include/NIWSParametricEq/gui/: BandComponent.h  FrequencyMapping.h
plugin/include/SimpleParametricEq/: BypassTransitioner.h  FrequencyResponseGUI.h  Parameters.h  ParametricEq.h  PluginEditor.h  PluginProcessor.h
plugin/include/SimpleParametricEq/components/: NotchFilter.h  PeakFilter.h
plugin/include/SimpleParametricEq/filters/: AllPassFilter.h  BandPassFilter.h  BiquadFilter.h  FilterParameters.h  HighPassFilter.h  HighShelfFilter.h  LowPassFilter.h  LowShelfFilter.h  NotchFilter.h  PeakFilter.h
plugin/include/SimpleParametricEq/gui/: BandComponent.h  FrequencyAxis.h
plugin/include/SimpleParametricEq/utils/: RingBuffer.h
plugin/source/: FilterInspectorPanel.cpp  FrequencyResponseGUI.cpp  JsonSerializer.cpp  Parameters.cpp  ParametricEq.cpp  PluginEditor.cpp  PluginProcessor.cpp  SpectrumAnalyzer.cpp
plugin/source/components/: NotchFilter.cpp  PeakFilter.cpp
plugin/source/gui/: FrequencyAxis.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
